--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Simple Navigation Bar</title>
+<title>Simple Navigation Bar - yang sudah di edit titlenya, Oyi bro!</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
