--- a/index.html
+++ b/index.html
@@ -1,38 +1,50 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Simple Navigation Bar - yang sudah di edit titlenya, Oyi bro!</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-<header>
-	<div class="wrapper">
-        <div id="logo"><a href="#"><img src="images/logo.png" alt="UICake" /></a></div>
-        <nav>
-            <ul>
-                <li><a href="#" class="current">Home</a></li>
-                <li class="dropdown"><a href="#">Dropdown</a>
-                	<ul class="submenu">
-                    	<li><a href="#">Dropdown list menu 1</a></li>
-                        <li><a href="#">Dropdown list menu 2</a></li>
-                        <li><a href="#">Dropdown list menu 3</a></li>
-                        <li><a href="#">Dropdown list menu 4</a></li>
-                        <li><a href="#">Dropdown list menu 5</a></li>
-                        <li><a href="#">Dropdown list menu 5</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">About</a></li>
-            </ul>
-            <div id="search">
-            <form id="form" action="#" method="get">
-                <input type="text" name="srch" id="srch" value="search..." onfocus="if (this.value == 'search...') {this.value = '';}" onblur="if (this.value == '') {this.value =	'search...';}" />
-                <input type="submit" name="submir" id="submit" value="" />
-            </form>
-        </div><!-- #search -->
-        </nav><!-- nav -->
-    </div><!-- .wrapper -->
-</header><!-- header -->
-<div id="copyright">Design by <a href="http://uicake.com" target="_blank">UICake</a> CSS by <a href="http://nizamilputra.com" target="_blank">Nizamilputra</a></div>
-</body>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<title>Simple Navigation Bar - yang sudah di edit titlenya, Oyi bro!</title>
+		<link rel="stylesheet" type="text/css" href="style.css" />
+	</head>
+	<body>
+		<header>
+			<div class="wrapper">
+				<nav>
+					<ul>
+						<li><a href="#" class="current">Beranda</a></li>
+						<li class="dropdown">
+							<a href="#">Sosial Media</a>
+							<ul class="submenu">
+								<li><a href="https://www.facebook.com/qomariah.KD">Facebook</a></li>
+								<li><a href="https://www.instagram.com/qomariah_kd/">Instagram</a></li>
+								<li><a href="https://github.com/qomariahkumaladewi">Github</a></li>
+								<li><a href="https://www.linkedin.com/in/qomariah-kumala-dewi/">LinkIn</a></li>
+							</ul>
+						</li>
+						<li><a href="#">Kontak</a></li>
+					</ul>
+					<div id="search">
+						<form id="form" action="#" method="get">
+							<input
+								type="text"
+								name="srch"
+								id="srch"
+								value="search..."
+								onfocus="if (this.value == 'search...') {this.value = '';}"
+								onblur="if (this.value == '') {this.value =	'search...';}"
+							/>
+							<input type="submit" name="submir" id="submit" value="" />
+						</form>
+					</div>
+					<!-- #search -->
+				</nav>
+				<!-- nav -->
+			</div>
+			<!-- .wrapper -->
+		</header>
+		<!-- header -->
+		<div id="copyright">
+			Design by
+			<a href="https://www.linkedin.com/in/qomariah-kumala-dewi/" target="_blank">qomariah-kumala-dewi</a>
+		</div>
+	</body>
 </html>
